src/tests/snapshots/gitu__tests__fetch__fetch_from_elsewhere.snap
---
source: src/tests/fetch.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                       Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git fetch origin                                                              |
styles_hash: e126db7c380bc646
