src/tests/snapshots/gitu__tests__fetch__fetch_from_upstream_prompt.snap
---
source: src/tests/fetch.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
? Set upstream then fetch: › █                                                  |
styles_hash: c82b1e41e00ab83d
