src/tests/snapshots/gitu__tests__fetch__fetch_menu_existing_push_remote_and_upstream.snap
---
source: src/tests/fetch.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                       Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
 Fetch                    Arguments                                             |
 a     from all remotes   -p Prune deleted branches (--prune)                   |
 p     from origin        -t Fetch all tags (--tags)                            |
 u     from origin                                                              |
 e     from elsewhere                                                           |
 q/esc Quit/Close                                                               |
styles_hash: 3b2f116b54be63b2
