src/tests/snapshots/gitu__tests__fetch__fetch_menu_no_remote_or_upstream_set.snap
---
source: src/tests/fetch.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                       Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
 Fetch                                 Arguments                                |
 a     from all remotes                -p Prune deleted branches (--prune)      |
 p     from pushRemote, setting that   -t Fetch all tags (--tags)               |
 u     from upstream, setting that                                              |
 e     from elsewhere                                                           |
 q/esc Quit/Close                                                               |
styles_hash: c6fa14e930b4b5cb
